# xcj

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  DOCS.md  TECHNICAL_SPEC.md  docker-compose.dev.yml
.claude/agents/: analytics.md  devops.md  go-backend.md  nextjs-frontend.md  project-manager.md  python-parser.md  tester.md
api/: CLAUDE.md  Dockerfile  go.mod  go.sum
deploy/: cloudflare-rules.md  crontab.example
deploy/docker/: docker-compose.yml
deploy/nginx/: cloudflare-ips.conf  nginx.conf
deploy/scripts/: deploy.sh  setup-server.sh  sync_counters.py
deploy/systemd/: traforama-api.service  traforama-categorizer.service  traforama-nginx.service  (+2 more)
docs/: PROJECT_OVERVIEW.md  parser.md
parser/: CLAUDE.md  Dockerfile  __main__.py  debug_parse.py  pyproject.toml  standalone_parse.py
parser/categorizer/: __init__.py  categories.py  pipeline.py  vision.py
parser/config/: settings.py
parser/finder/: runner.py  twitter_finder.py
parser/parsers/: __init__.py  base.py  instagram.py  twitter.py
parser/services/: neuroscore.py
parser/storage/: db.py  s3.py
parser/tasks/: banner_worker.py  parse_worker.py
parser/templates/: banner_bold.html  banner_bold_prod.html  banner_card.html  banner_elegant.html  banner_minimalist.html  gallery.html
parser/tests/: test_banner_image.py  test_clean_bio.py  test_neuroscore.py
parser/utils/: image.py
scripts/: admin.py  requirements.txt
web/: .mock-accounts.json  .mock-videos.json  CLAUDE.md  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+231 files in other folders)
