[project]
name = "traforama-parser"
version = "0.1.0"
description = "Video parser for Traforama aggregator — scrapes Twitter/X accounts, downloads thumbnails, generates preview clips"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27,<1.0",
    "yt-dlp>=2024.1",
    "Pillow>=10.0,<11.0",
    "ffmpeg-python>=0.2.0,<1.0",
    "asyncpg>=0.29,<1.0",
    "boto3>=1.34,<2.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "openai>=1.0,<2.0",
    "twscrape>=0.12,<1.0",
    "apify-client>=1.6,<2.0",
    "google-genai>=1.0",
    "numpy>=1.24,<3.0",
    "opencv-python-headless>=4.8,<5.0",
]

[project.scripts]
traforama-parser = "parser.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "parser",
    "parser.config",
    "parser.parsers",
    "parser.storage",
    "parser.tasks",
    "parser.categorizer",
    "parser.finder",
    "parser.utils",
]

[tool.setuptools.package-dir]
"parser" = "."
